# DO-AN-

./: .gitignore  README.md  desktop_app.py  pyproject.toml  requirements-windows.txt  requirements.txt  run_app.py
electricity_forecast/: __init__.py  anomaly.py  app.py  cli.py  data.py  database.py  features.py  models.py  optimizer.py  plots.py  qt_compat.py  qt_runtime.py  run.py  test.py  tk_app.py  types.py  ui.py  weather.py  web_app.py
packaging/: ElectricityForecastWindows.spec
scripts/: build_macos_app.sh  build_windows.bat  build_windows.ps1  run_native_macos.sh  setup_native_macos.sh
tests/: test_data.py  test_features_models.py  test_optimizer.py  test_weather.py
