[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "electricity-price-forecast"
version = "0.1.0"
description = "Desktop energy consumption forecasting app for hourly kWh prediction."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=0.10",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "PyQt6==6.7.1",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pyinstaller>=6.0",
    "ruff>=0.15",
]

[project.scripts]
electricity-forecast = "electricity_forecast.app:main"

[tool.setuptools.packages.find]
include = ["electricity_forecast*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
